--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,23 @@ environment:
   sdk: ^3.1.1
 
 dependencies:
+  amplify_api: ^1.0.0
+  amplify_auth_cognito: ^1.0.0
+  amplify_authenticator: ^1.0.0
+  amplify_flutter: ^1.0.0
+  amplify_storage_s3: ^1.0.0
   flutter:
     sdk: flutter
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  go_router: ^12.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
